namespaces and event moved to viewModel

--- a/view/frontend/templates/list.phtml
+++ b/view/frontend/templates/list.phtml
@@ -1,8 +1,8 @@
 <?php
 
 /**
- * @var \Inchoo\Sample04\Block\ListBlock $block
- * @var \Inchoo\Sample04\ViewModel\AllNewsViewModel $newsViewModel
+ * @var \Inchoo\EventsObservers\Block\ListBlock $block
+ * @var \Inchoo\EventsObservers\ViewModel\AllNewsViewModel $newsViewModel
  */
 $newsViewModel = $block->getData('news_list');
 $newsList = $newsViewModel->getAllNews();
