--- a/view/frontend/templates/view.phtml
+++ b/view/frontend/templates/view.phtml
@@ -1,7 +1,7 @@
 <?php
 /**
- * @var \Inchoo\Sample04\Block\View $block
- * @var \Inchoo\Sample04\ViewModel\NewsViewModel $viewModel
+ * @var \Inchoo\EventsObservers\Block\View $block
+ * @var \Inchoo\EventsObservers\ViewModel\NewsViewModel $viewModel
  */
 $viewModel = $block->getViewModel();
 $news = $viewModel->getNewsById($block->getNewsId());
